practice-final/kubernetes/mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysqldb
  labels:
    app: py-app1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: py-app1
      tier: mysqldb
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: py-app1
        tier: mysqldb
    spec:
      containers:
      - name: mysqldb
        image: mysql
        ports:
        - containerPort: 3306
          name: mysqldb
