practice-final/kubernetes/mysql-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
  labels:
    app: py-app1
spec:
  type: ClusterIP
  selector:
    app: py-app1
    tier: mysqldb
  ports:
  - port: 3306
    targetPort: 3306
